--- a/group_document.qmd
+++ b/group_document.qmd
@@ -16,7 +16,7 @@ When you click the **Render** button a document will be generated that includes 
 ## Felix
 
 ```{r}
-1 + 1
+"HELLO Guys"
 ```
 
 ## José
