--- a/group_document.qmd
+++ b/group_document.qmd
@@ -44,5 +44,6 @@ When you click the **Render** button a document will be generated that includes 
 ## Tender
 
 ```{r}
-#Hello
+# Hello
+# 2nd hello
 ```
