--- a/group_document.qmd
+++ b/group_document.qmd
@@ -18,6 +18,7 @@ When you click the **Render** button a document will be generated that includes 
 ```{r}
 "HELLO Guys"
 "test"
+"test2"
 ```
 
 ## José
