--- a/group_document.qmd
+++ b/group_document.qmd
@@ -51,6 +51,21 @@ a
 
 ```
 
+### New analysis - Sahandyz
+```{r}
+2 + 2
+```
+
+```{r}
+3 + 3
+```
+
+```{r}
+2 * 5
+```
+
+
+f
 ## Tender
 
 ```{r}
