--- a/Assignment7.qmd
+++ b/Assignment7.qmd
@@ -37,6 +37,12 @@ load(file = str_c(raw_dir, data_file))
 
 ```
 
+We want to perform PCA, so we want to do these three things to make an analysis:
+
+1) Look at the data in PC coordinates.
+2) Look at the rotation matrix.
+3) Look at the variance explained by each PC.
+
 ### Look at the data in PC coordinates
 
 ```{r}
@@ -55,15 +61,23 @@ pca_fit <- gravier |>
 #Plot PCA
 pca_fit |> 
   augment(gravier) |>  # add original dataset back in
-  ggplot(aes(x = .fittedPC1, y  = .fittedPC2, color = Early_metastasis)) + 
+  ggplot(aes(x = .fittedPC1, 
+             y  = .fittedPC2, 
+             color = Early_metastasis)) + 
   geom_point() +
   scale_color_manual(
-    values = c(good = "#D55E00", poor = "#0072B2")) +
+    values = c(good = "#D55E00", 
+               poor = "#0072B2")) +
   labs( title = "PCA plot of Gravier data",
            x = "PCA1",
            y = "PCA2") +
-  theme(plot.title = element_text(hjust = 0.5))
+  theme(plot.title = element_text(hjust = 0.5)) +
+  theme_minimal()
 ```
+This is a visualization of the data in the first two principal component coordinates. These components are linear combinations of the original variables. The plot helps explore how the data points are distributed in a reduced-dimensional space defined by the first two principal components.
+
+The Early_metastasis helps to see if there is any separation or clustering of data points based on early metastasis status. In the previous plot we can't see aparently any separation based on early metastasis, showing that the groups "poor" and "good" have different patterns in the original data.
+
 
 ```{r}
 gravier |>  View()
@@ -71,7 +85,7 @@ pca_fit |> View()
 str(pca_fit)
 ```
 
-## Plot the rotation matrix
+### Plot the rotation matrix
 
 ```{r}
 
@@ -98,7 +112,7 @@ pca_fit |>
 
 ```
 
-## Variance explained by each PC
+### Variance explained by each PC
 
 ```{r}
 
@@ -108,12 +122,14 @@ pca_fit |>
 pca_fit |> 
   tidy(matrix = "eigenvalues") |> 
   ggplot(aes(PC, percent)) +
-  geom_col(fill = "#56B4E9", alpha = 0.8) +
+  geom_col(fill = "#56B4E9", 
+           alpha = 0.8) +
   scale_x_continuous(breaks= waiver()) +
   scale_y_continuous(
     labels = scales::percent_format(),
     expand = expansion(mult = c(0, 0.01))
-  ) 
+  ) + 
+  theme_minimal()
 ```
 
 So what exactly does all this mean?
